--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicons-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 
+<!-- stylesheet -->
+<link rel="stylesheet" href="style.css">
+
+<!-- Scripts-->
+
+<script src="script.js" defer></script>
+
 
 
 
