--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
 
      <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicons-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicons-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+<link rel="manifest" href="/favicons/site.webmanifest">
 
 <!-- stylesheet -->
 <link rel="stylesheet" href="style.css">
 
 <!-- Scripts-->
-
 <script src="script.js" defer></script>
-
-
 
 
     <title>Web 1 Website Starter</title>
 </head>
+
 <body>
 
     <h1>Web 1 Website Starter</h1>
     
-    <img src="giphy.gif" alt="Inspirational Giphy">
+    <img src="assets/giphy.gif" alt="Inspirational Giphy">
 
 
     
