--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
 <script src="script.js" defer></script>
 
 
-    <title>Web 1 Website Starter</title>
+    <title>Coffee</title>
 </head>
 
 <body>
 
-    <h1>Web 1 Website Starter</h1>
+    <h1>Coffee</h1>
     
-    <img src="assets/giphy.gif" alt="Inspirational Giphy">
-
+  
 
     
 </body>
