updated Beta version

--- a/index.html
+++ b/index.html
@@ -20,35 +20,44 @@
 <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js" defer"></script>
 <script src="script.js" defer></script>
 
+<section class="panel">
+  <div class="bg one"></div>
+  <h1>Should We Be Scared of Sharks?</h1>
+  <p>Over the years, sharks have gotten a bad rap as bloodthirsty man-eaters. I challenge you to take a second look at these magnificent creatures and to fight fear with facts. We will go over 4 valid reasons to re-think the shark—even the great white, a species that has starred in our horror movies and collective nightmares for decades. It’s time for us to embrace the fact that there’s far more to sharks than their bite. In fact, your chances of being the victim of an unprovoked shark encounter are lower than your chances of being struck by lightning, injured in a hunting accident, or even attacked by a domestic dog. Even though the odds are in your favor, sharks are wild animals that must be respected when encountered.</p>
+</section>
 
-    <title>Sharks!</title>
-</head>
+<section class="panel">
+  <div class="bg two"></div>
+  <h1 class="red">1.You Want The Truth?</h1>
+  <p>In 2006 the International Shark Attack File (ISAF) undertook an investigation into 96 alleged shark attacks, confirming 62 of them as unprovoked attacks and 16 as provoked attacks. The average number of fatalities worldwide per year between 2001 and 2006 from unprovoked shark attacks is 4.3. Contrary to popular belief, only a few sharks are dangerous to humans. Out of more than 470 species, only four have been involved in a significant number of fatal, unprovoked attacks on humans: the great white, oceanic whitetip, tiger, and bull sharks.These sharks are large, powerful predators, and may sometimes attack and kill people. Despite being responsible for attacks on humans they have all been filmed without using a protective cage. The perception of sharks as dangerous animals has been popularized by publicity given to a few isolated unprovoked attacks, such as the Jersey Shore shark attacks of 1916, and through popular fictional works about shark attacks, such as the Jaws film series. Jaws author Peter Benchley, as well as Jaws director Steven Spielberg, later attempted to dispel the image of sharks as man-eating monsters. To help avoid an unprovoked attack, humans should not wear jewelry or metal that is shiny and refrain from splashing around too much. In general, sharks show little pattern of attacking humans specifically. Research indicates that when humans do become the object of a shark attack, it is possible that the shark has mistaken the human for species that are its normal prey, such as seals. This was further proven in a recent study conducted by researchers at the California State University's Shark Lab. According to footage caught by the Lab's drones, juveniles swam right up to humans in the water without any bites incidents. The lab stated that the results showed that humans and sharks can co-exist in the water.</p>
+</section>
 
-<body>
+<section class="panel">
+  <div class="bg three"></div>
+  <h1>2. Respect your elders</h1>
+  <p>Sharks have been on the planet for over 400 million years and today comprise approximately 500 different species. Of those 500 species, half are less than three feet long. In reality, only a handful of sharks present any real threat to humans.
+    Shark lifespans vary by species. Most live 20 to 30 years. The spiny dogfish has one of the longest lifespans at more than 100 years. Whale sharks (Rhincodon typus) may also live over 100 years. Earlier estimates suggested the Greenland shark (Somniosus microcephalus) could reach about 200 years, but a recent study found that a 5.02-metre-long (16.5 ft) specimen was 392 ± 120 years old (i.e., at least 272 years old), making it the longest-lived vertebrate known.
+    Sharks also have a long and impressive lineage. Ancient sharks were cruising the ocean 400 million years ago—long before dinosaurs roamed on land. Now-extinct ancestors of the great white like the Megalodon evolved more than 20 million years ago. Moving closer to our time, the whale shark, the biggest fish in the sea, is no threat to humans. They can grow up to 39ft and weigh upwards of 30,000lbs. Whale sharks have extremely tiny teeth, and despite their intimidating size are filter feeders eating only plankton, shrimp and small fish. Whale sharks are true gentle giants and with an awe-inspiring size and beautiful polka dot-patterned body and therefore are a popular shark to safely snorkel and dive with. In fact, they are the largest living creature on the planet that people can observe up close in the wild without being in any danger.</p>
+</section>
 
-  <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GSAP Scroll Trigger with Panels</title>
-  
-  
-  <div class="panel">Over the years, sharks have gotten a bad rap as bloodthirsty man-eaters. We challenge you to take a second look at these magnificent creatures and to fight fear with facts. Here are five reasons to re-think the shark—even the great white, a species that has starred in our horror movies and collective nightmares for decades. It’s time for us to embrace the fact that there’s far more to sharks than their bite.</div>
-  <div class="panel">
-    <h1> Respect your elders</h1>
-    <p>In fact, your chances of being the victim of an unprovoked shark encounter are lower than your chances of being struck by lightning, injured in a hunting accident, or even attacked by a domestic dog. Even though the odds are in your favor, sharks are wild animals that must be respected when encountered<p>
-      
-    </div>
-  
-  <div class="panel">Jaws really did a number on the way we think of sharks. And yes, they are creatures that have evolved over 450 million years to be perfect killing machines. They’re apex predators that hunt the ocean without fear of anything other than maybe the errant killer whale with a taste for shark liver. And we, with our tiny flailing legs and arms, dull teeth, and weak nails, are no match for one. The news doesn’t help, either — if it bleeds it leads, and shark attacks are bloody — and every shark attack is relentlessly reported on by outlets chasing the almighty click. Thankfully, we have brains large enough to create things to protect ourselves and opposable thumbs, otherwise we’d be on the menu instead of the ones writing it. But should we really be afraid of sharks? You already know the answer: absolutely not.</div>
-  
-  
-  <div class="panel">By most estimates, humans kill somewhere around 100 million sharks a year. That’s about 11,000 an hour. Let that sink in for a second. In the time it took you to make breakfast, eat, and wash the dishes this morning, 11,000 sharks perished. Eleven thousand more will perish in the next hour after that, and the next one and the next one and the next one. Every single hour of every day for an entire year. According to the International Shark Attack File (ISAF), in 2020 there were 129 shark attacks. Fifty-seven of those were unprovoked, and there were 13 fatalities. In the world. And although that number is up from the average, the average number is four fatal attacks globally each year.</div>
-  <div class="panel">So if you’re in that scared-of-sharks club, I get it. Your fear is okay. But it helps to remember that it’s not sharks that are scary — it’s your idea of what a shark could do. Remember, though, that your chances of actually being attacked by a shark, even if you see one in the lineup, are infinitesimally small and that we, with our big brains and opposable thumbs, are the scariest ones. We need sharks to keep our oceans healthy, after all, and our irrational fear of sharks won’t lead anywhere good.</div>
+<section class="panel">
+  <div class="bg four"></div>
+  <h1>3. It's All about Perspective</h1>
+  <p>Jaws really did a number on the way we think of sharks. And yes, they are creatures that have evolved over 450 million years to be perfect killing machines. They’re apex predators that hunt the ocean without fear of anything other than maybe the errant killer whale with a taste for shark liver. And we, with our tiny flailing legs and arms, dull teeth, and weak nails, are no match for one. The news doesn’t help, either — if it bleeds it leads, and shark attacks are bloody — and every shark attack is relentlessly reported on by outlets chasing the almighty click. Thankfully, we have brains large enough to create things to protect ourselves and opposable thumbs, otherwise we’d be on the menu instead of the ones writing it. But should we really be afraid of sharks? You already know the answer: absolutely not.</p>
+</section>
 
+<section class="panel">
+  <div class="bg five"></div>
+  <h1 class="white">4. We're Kiling Them?</h1>
+  <p class="white">In 2008, it was estimated that nearly 100 million sharks were being killed by people every year, due to commercial and recreational fishing. In 2021, it was estimated that the population of oceanic sharks and rays had dropped by 71% over the previous half-century.
+    Sharks are often killed for shark fin soup. Fishermen capture live sharks, fin them, and dump the finless animal back into the water. Shark finning involves removing the fin with a hot metal blade.The resulting immobile shark soon dies from suffocation or predators. Shark fin has become a major trade within black markets all over the world. Fins sell for about $300/lb in 2009. Poachers illegally fin millions each year. Few governments enforce laws that protect them. In 2010 Hawaii became the first U.S. state to prohibit the possession, sale, trade or distribution of shark fins. From 1996 to 2000, an estimated 38 million sharks had been killed per year for harvesting shark fins. It is estimated by TRAFFIC that over 14,000 tonnes of shark fins were exported into Singapore between 2005–2007 and 2012–2014.
+    Sharks are also killed for meat. European diners consume dogfishes, smoothhounds, catsharks, makos, porbeagle and also skates and rays. However, the U.S. FDA lists sharks as one of four fish (with swordfish, king mackerel, and tilefish) whose high mercury content is hazardous to children and pregnant women.
+    Killing sharks negatively affects the marine ecosystem. Jessica Morris of Humane Society International calls shark culling a "knee-jerk reaction" and says, "sharks are top order predators that play an important role in the functioning of marine ecosystems. We need them for healthy oceans."</p>
+</section>
 
-  
-
-    
-</body>
-</html>
+<section class="panel">
+  <div class="bg six"></div>
+  <h1 class="red">In Conclusion</h1>
+  <p class="red">The top predators on Earth is no doubt humans. Sharks have a lot more to fear from us than we do of them. From finning practices, fishing bycatch and the inappropriate disposal of plastics and other pollutants, many species of sharks are becoming endangered entirely because of us. It has been estimated that humans kill on average about 100 million sharks around the world each year, while an average of less than 10 humans are killed by sharks. Sharks have a bad reputation that has led many humans to fear them, but in reality the tables are turned.
+    However, despite the negative impact humans have had on our shark populations, we have also seen a positive impact in many areas as more people, organizations, and governments work to protect, manage and conserve our oceans and shark populations. A healthy population of sharks will lead to a healthy and abundant ocean.</p>
+</section>
